--- a/Myerp/Tpl/Chanpin/kongguan.html
+++ b/Myerp/Tpl/Chanpin/kongguan.html
@@ -91,8 +91,8 @@
           <th scope="col" nowrap="nowrap" style="min-width:300px; width:30%"><div> 产品名称 </div></th>
           <th scope="col" nowrap="nowrap" style="min-width:80px;"><div> 出团日期 </div></th>
           <th scope="col" nowrap="nowrap"><div> 成人/儿童价格修正 </div></th>
-          <th scope="col" nowrap="nowrap"><div> 发布人 </div></th>
-          <th scope="col" nowrap="nowrap"><div> 单位 </div></th>
+          <th scope="col" nowrap="nowrap" style="min-width:60px;"><div> 发布人 </div></th>
+          <th scope="col" nowrap="nowrap" style="min-width:80px;"><div> 单位 </div></th>
           <th scope="col" nowrap="nowrap"><div> 状态 </div></th>
           <th scope="col" nowrap="nowrap"><div> 锁状态 </div></th>
           <th scope="col" nowrap="nowrap"><div> 报账情况 </div></th>
