Signed-off-by: unknown <20111224i705@20111224i705-PC.(none)>

--- a/Myerp/Tpl/Chanpin/danxiangfuwu.html
+++ b/Myerp/Tpl/Chanpin/danxiangfuwu.html
@@ -21,7 +21,7 @@
           <php>if($markpos == ''){</php>
           class="current"
           <php>}</php>
-          href="<{:SITE_INDEX}><{$actionmethod}>/danxiangfuwu">单项服务</a> </li>
+          href="<{:SITE_INDEX}><{$actionmethod}>/danxiangfuwu">全部</a> </li>
         <li> <a 
           <php>if($markpos == '签证'){</php>
           class="current"
