--- a/Myerp/Tpl/Chanpin/danxiangfuwu.html
+++ b/Myerp/Tpl/Chanpin/danxiangfuwu.html
@@ -93,6 +93,7 @@
           <th scope="col" nowrap="nowrap"><div> 类型 </div></th>
           <th scope="col" nowrap="nowrap"><div> 审核阶段 </div></th>
           <th scope="col" nowrap="nowrap" style="width:30%;"><div> 备注说明 </div></th>
+          <th scope="col" nowrap="nowrap"><div> 时间 </div></th>
           <th scope="col" nowrap="nowrap" style="min-width:100px;"><div> 操作 </div></th>
         </tr>
           <php>
@@ -104,6 +105,7 @@
             <td scope="row" align="left" valign="top"><{$vol['type']}></td>
             <td scope="row" align="left" valign="top"><{$vol['shenhe_remark']}></td>
             <td scope="row" align="left" valign="top"><{$vol['datatext']['remark']}></td>
+            <td scope="row" align="left" valign="top"><php>echo date('Y/m/d H:i',$vol['time'])</php></td>
             <td scope="row" align="left" valign="top">
               <input type="button" value="查看" name="button" class="button primary" onClick="showinfo(<{$vol['chanpinID']}>,'签证');">
               <input type="button" value="删除" name="button" class="button primary" onClick="deletebaozhang(<{$vol['chanpinID']}>);" >
@@ -118,6 +120,7 @@
           <th scope="col" nowrap="nowrap"><div> 审核阶段 </div></th>
           <th scope="col" nowrap="nowrap"><div> 人数 </div></th>
           <th scope="col" nowrap="nowrap" style="width:30%;"><div> 备注说明 </div></th>
+          <th scope="col" nowrap="nowrap"><div> 时间 </div></th>
           <th scope="col" nowrap="nowrap" style="min-width:100px;"><div> 操作 </div></th>
         </tr>
           <php>
@@ -129,6 +132,7 @@
             <td scope="row" align="left" valign="top"><{$vol['shenhe_remark']}></td>
             <td scope="row" align="left" valign="top"><{$vol['renshu']}></td>
             <td scope="row" align="left" valign="top"><{$vol['datatext']['remark']}></td>
+            <td scope="row" align="left" valign="top"><php>echo date('Y/m/d H:i',$vol['time'])</php></td>
             <td scope="row" align="left" valign="top">
               <input type="button" value="查看" name="button" class="button primary" onClick="showinfo(<{$vol['chanpinID']}>,'签证');">
               <input type="button" value="删除" name="button" class="button primary" onClick="deletebaozhang(<{$vol['chanpinID']}>);" >
@@ -144,6 +148,7 @@
           <th scope="col" nowrap="nowrap"><div> 人数 </div></th>
           <th scope="col" nowrap="nowrap"><div> 航班号 </div></th>
           <th scope="col" nowrap="nowrap" style="width:30%;"><div> 备注说明 </div></th>
+          <th scope="col" nowrap="nowrap"><div> 时间 </div></th>
           <th scope="col" nowrap="nowrap" style="min-width:100px;"><div> 操作 </div></th>
         </tr>
           <php>
@@ -156,6 +161,7 @@
             <td scope="row" align="left" valign="top"><{$vol['renshu']}></td>
             <td scope="row" align="left" valign="top"><{$vol['datatext']['hangbanhao']}></td>
             <td scope="row" align="left" valign="top"><{$vol['datatext']['remark']}></td>
+            <td scope="row" align="left" valign="top"><php>echo date('Y/m/d H:i',$vol['time'])</php></td>
             <td scope="row" align="left" valign="top">
               <input type="button" value="查看" name="button" class="button primary" onClick="showinfo(<{$vol['chanpinID']}>,'签证');">
               <input type="button" value="删除" name="button" class="button primary" onClick="deletebaozhang(<{$vol['chanpinID']}>);" >
@@ -171,6 +177,7 @@
           <th scope="col" nowrap="nowrap"><div> 人数 </div></th>
           <th scope="col" nowrap="nowrap"><div> 酒店名称 </div></th>
           <th scope="col" nowrap="nowrap" style="width:30%;"><div> 备注说明 </div></th>
+          <th scope="col" nowrap="nowrap"><div> 时间 </div></th>
           <th scope="col" nowrap="nowrap" style="min-width:100px;"><div> 操作 </div></th>
         </tr>
           <php>
@@ -183,6 +190,7 @@
             <td scope="row" align="left" valign="top"><{$vol['renshu']}></td>
             <td scope="row" align="left" valign="top"><{$vol['datatext']['hotel']}></td>
             <td scope="row" align="left" valign="top"><{$vol['datatext']['remark']}></td>
+            <td scope="row" align="left" valign="top"><php>echo date('Y/m/d H:i',$vol['time'])</php></td>
             <td scope="row" align="left" valign="top">
               <input type="button" value="查看" name="button" class="button primary" onClick="showinfo(<{$vol['chanpinID']}>,'签证');">
               <input type="button" value="删除" name="button" class="button primary" onClick="deletebaozhang(<{$vol['chanpinID']}>);" >
@@ -197,6 +205,7 @@
           <th scope="col" nowrap="nowrap"><div> 标题 </div></th>
           <th scope="col" nowrap="nowrap"><div> 审核阶段 </div></th>
           <th scope="col" nowrap="nowrap" style="width:30%;"><div> 备注说明 </div></th>
+          <th scope="col" nowrap="nowrap"><div> 时间 </div></th>
           <th scope="col" nowrap="nowrap" style="min-width:100px;"><div> 操作 </div></th>
         </tr>
           <php>
@@ -207,6 +216,7 @@
             <td scope="row" align="left" valign="top"><{$vol['title']}></td>
             <td scope="row" align="left" valign="top"><{$vol['shenhe_remark']}></td>
             <td scope="row" align="left" valign="top"><{$vol['datatext']['remark']}></td>
+            <td scope="row" align="left" valign="top"><php>echo date('Y/m/d H:i',$vol['time'])</php></td>
             <td scope="row" align="left" valign="top">
               <input type="button" value="查看" name="button" class="button primary" onClick="showinfo(<{$vol['chanpinID']}>,'签证');">
               <input type="button" value="删除" name="button" class="button primary" onClick="deletebaozhang(<{$vol['chanpinID']}>);" >
