Signed-off-by: unknown <20111224i705@20111224i705-PC.(none)>

--- a/Myerp/Tpl/SetSystem/templatelist.html
+++ b/Myerp/Tpl/SetSystem/templatelist.html
@@ -1113,7 +1113,7 @@ var SITE_INDEX = '<{:SITE_INDEX}>';
           <tr>
             <td valign="top" scope="row" style="min-width:50px;"> 标题: </td>
             <td valign="top" scope="row">
-            <input name="title" type="text" id="title" check="^\S+$" warning="标题不能为空,且不能含有空格" >
+            <input name="title" type="text" id="title" style="width:200px;" check="^\S+$" warning="标题不能为空,且不能含有空格" >
             </td>
             <td valign="top" scope="row" style="min-width:50px;"> 相关动作: </td>
             <td valign="top" scope="row">
