--- a/Myerp/Tpl/Index/FAQ.html
+++ b/Myerp/Tpl/Index/FAQ.html
@@ -48,9 +48,9 @@
             
             <table cellpadding="0" cellspacing="0" width="100%" class="list view" id="">
               <tbody>
-            <php>foreach($datalist as $v){</php>
+            <php>$i=0;foreach($datalist as $v){$i++;</php>
                 <tr height="20">
-                  <th scope="col" nowrap="nowrap"><a name="<{$v['systemID']}>"></a><div> 1.<{$v['title']}> </div></th>
+                  <th scope="col" nowrap="nowrap"><a name="<{$v['systemID']}>"></a><div> <{$i}>.<{$v['title']}> </div></th>
                 </tr>
                 
                 <tr height="40" class="evenListRowS1">
