--- a/Myerp/Tpl/SetSystem/templatelist.html
+++ b/Myerp/Tpl/SetSystem/templatelist.html
@@ -931,6 +931,11 @@ var SITE_INDEX = '<{:SITE_INDEX}>';
 				});
 				// Dialog Link
 				jQuery('#FAQ_create').click(function(){
+					jQuery("#title").val('');
+					jQuery("#description").val('');
+					jQuery("#category").val('');
+					CKEDITOR.instances.message.setData('');
+					jQuery("#systemID").val('');
 					jQuery('#dialog_FAQ').dialog('open');
 					return false;
 				});
