--- a/Myerp/Tpl/Xiaoshou/baoming.html
+++ b/Myerp/Tpl/Xiaoshou/baoming.html
@@ -139,6 +139,7 @@ function ajaxalert(title){
       <input type="hidden" name="title" value="<{$xianlu['xianlu']['title']}>/<{$zituan['chutuanriqi']}>" />
       <input type="hidden" name="zituanID" value="<{$chanpinID}>" />
       <input type="hidden" name="shoujiaID" value="<{$shoujiaID}>" />
+      <input type="hidden" name="guojing_copy" value="<{$zituan['guojing_copy']}>" />
       <table width="100%" class="tb1" cellpadding="0" cellspacing="0">
         <tbody>
           <tr>
