Signed-off-by: unknown <20111224i705@20111224i705-PC.(none)>

--- a/Myerp/Tpl/Chanpin/print_danxiangfuwu.html
+++ b/Myerp/Tpl/Chanpin/print_danxiangfuwu.html
@@ -126,7 +126,7 @@
       </tr>
     <php>}</php>
       
-    <php>if($baozhang['type'] == '导游' || $baozhang['type'] == '餐饮 || $baozhang['type'] == '门票''){</php>
+    <php>if($baozhang['type'] == '导游' || $baozhang['type'] == '餐饮' || $baozhang['type'] == '门票'){</php>
       <tr height="28px" >
         <td width="25%">&nbsp;标题：<{$baozhang['title']}></td>
         <td width="25%">&nbsp;人数：<{$baozhang['renshu']}></td>
