Signed-off-by: unknown <20111224i705@20111224i705-PC.(none)>

--- a/Myerp/Tpl/Xiaoshou/index.html
+++ b/Myerp/Tpl/Xiaoshou/index.html
@@ -112,7 +112,7 @@
                   <td valign="top" align="left" scope="row"><{$i}></td>
                   <td valign="top" align="center" style="min-width:300px;" scope="row"><strong style="color:blue"><{$v['xianlu_title']}></strong></td>
                   <td valign="top" align="left" scope="row"><{$v['adultprice']}>元</td>
-                  <td valign="top" align="left" scope="row"><php>echo date('Y/m/d H:i',$v['xianlu']['xianlu']['time']);</php></td>
+                  <td valign="top" align="left" scope="row"><php>echo date('Y/m/d H:i',$v['time']);</php></td>
                   <td valign="top" align="left" style="min-width:50px;" scope="row"><{$v['bumen_copy']}></td>
                 </tr>  
                 <tr height="40" class="evenListRowS1">
