Signed-off-by: unknown <20111224i705@20111224i705-PC.(none)>

--- a/Myerp/Tpl/Xiaoshou/index.html
+++ b/Myerp/Tpl/Xiaoshou/index.html
@@ -114,7 +114,7 @@
                   <td valign="top" align="left" scope="row"><{$i}></td>
                   <td valign="top" align="center" scope="row"><strong style="color:blue"><{$v['xianlu_title']}></strong></td>
                   <td valign="top" align="left" scope="row"><{$v['adultprice']}>元</td>
-                  <td valign="top" align="left" scope="row"><{$v['type']}>元</td>
+                  <td valign="top" align="left" scope="row"><{$v['type']}></td>
                   <td valign="top" align="left" scope="row"><php>echo date('Y/m/d H:i',$v['time']);</php></td>
                   <td valign="top" align="left" scope="row"><{$v['user_name']}></td>
                   <td valign="top" align="left" scope="row"><{$v['bumen_copy']}></td>
