Signed-off-by: unknown <20111224i705@20111224i705-PC.(none)>

--- a/Myerp/Tpl/Index/header.html
+++ b/Myerp/Tpl/Index/header.html
@@ -184,6 +184,7 @@ var SITE_PUBLIC = '<{:__PUBLIC__}>';
           <li> <a href="<{:SITE_INDEX}>Dijie/fabu/guojing/境外/kind/台湾">境外团队（台湾） </a> </li>
         </ul>
       </li>
+      <li> <a href="<{:SITE_INDEX}>Dijie/shenhe">产品审核</a> </li>
       <li> <a href="<{:SITE_INDEX}>Dijie/danxiangfuwu">单项服务</a> </li>
     </ul>
     </span> 
