--- a/Myerp/Tpl/Index/forme.html
+++ b/Myerp/Tpl/Index/forme.html
@@ -2,6 +2,7 @@
 <div id="main">
 <a href="/index.php?s=/Forme/chanpinxianlu" target="_blank" >线路</a><br>
 <a href="/index.php?s=/Forme/chanpindijie" target="_blank" >地接</a><br>
+<a href="/index.php?s=/Forme/danxiangfuwu_build" target="_blank" >单项服务</a><br>
 <a href="/index.php?s=/Forme/doCustomer" target="_blank" >游客</a><br>
 <a href="/index.php?s=/Forme/fillusertouser" target="_blank" >补填用户</a><br>
 <a href="/index.php?s=/Forme/fillbumentobumen" target="_blank" >补填部门</a><br>
