Signed-off-by: unknown <20111224i705@20111224i705-PC.(none)>

--- a/Myerp/Tpl/Index/forme.html
+++ b/Myerp/Tpl/Index/forme.html
@@ -3,6 +3,8 @@
 <a href="/index.php?s=/Forme/chanpinxianlu" target="_blank" >线路</a><br>
 <a href="/index.php?s=/Forme/chanpindijie" target="_blank" >地接</a><br>
 <a href="/index.php?s=/Forme/danxiangfuwu_build" target="_blank" >单项服务</a><br>
+<a href="/index.php?s=/Forme/doMessage" target="_blank" >公告</a><br>
+<a href="/index.php?s=/Forme/doMessage_paituanbiao" target="_blank" >排团表</a><br>
 <a href="/index.php?s=/Forme/doCustomer" target="_blank" >游客</a><br>
 <a href="/index.php?s=/Forme/fillusertouser" target="_blank" >补填用户</a><br>
 <a href="/index.php?s=/Forme/fillbumentobumen" target="_blank" >补填部门</a><br>
