Signed-off-by: unknown <20111224i705@20111224i705-PC.(none)>

--- a/Myerp/Tpl/Index/forme.html
+++ b/Myerp/Tpl/Index/forme.html
@@ -12,3 +12,10 @@
 <a href="/index.php?s=/Forme/clearuselessdata" target="_blank" >清除多余数据</a><br>
 <a href="/index.php?s=/Forme/cleartabledata" target="_blank" >清空临时数据</a><br>
 <a href="/index.php?s=/Forme/bumenzhangwenreset" target="_blank" >重置zhangwen</a><br>
+
+<script>
+timer=setTimeout('Redirect("<{$url}>")', 3000); //跳转
+function Redirect(url){ 
+window.location = url; 
+} 
+</script>
