Signed-off-by: unknown <20111224i705@20111224i705-PC.(none)>

--- a/Myerp/Tpl/Index/forme.html
+++ b/Myerp/Tpl/Index/forme.html
@@ -14,8 +14,10 @@
 <a href="/index.php?s=/Forme/bumenzhangwenreset" target="_blank" >重置zhangwen</a><br>
 
 <script>
+<php>if($url){</php>
 timer=setTimeout('Redirect("<{$url}>")', 3000); //跳转
 function Redirect(url){ 
 window.location = url; 
 } 
+<php>}</php>
 </script>
