Signed-off-by: unknown <20111224i705@20111224i705-PC.(none)>

--- a/Myerp/Tpl/Index/header.html
+++ b/Myerp/Tpl/Index/header.html
@@ -40,7 +40,7 @@ var SITE_PUBLIC = '<{:__PUBLIC__}>';
   <div id="companyLogo" style="padding:4px 15px 10px;"> <img src="<{:__PUBLIC__}>/myerp/images/company_logo.png" width="212" height="40" alt="Company Logo" border="0"> </div>
   <div id="globalLinks" style="padding:18px 0 0 10px;">
     <ul>
-      <li> <a href="javascript:void(0)" id="user_create">用户信息</a> </li>
+      <li> <a href="javascript:void(0)" id="userinfo_create">用户信息</a> </li>
       <li> <span>|</span> <a href="javascript:void(0)" id="password_create">修改密码</a> </li>
       <li> <span>|</span> <a target="_blank" href="<{:SITE_INDEX}>Index/FAQ">FAQ</a> </li>
       <li> <span>|</span> <a href="#">关于</a> </li>
@@ -224,8 +224,8 @@ var SITE_PUBLIC = '<{:__PUBLIC__}>';
 </form>
 </div>
 
-<div id="dialog_user" title="个人信息" style="background:#FFF">
-<form id="form_user" id="form_user" method="post" >
+<div id="dialog_userinfo" title="个人信息" style="background:#FFF">
+<form id="form_userinfo" id="form_userinfo" method="post" >
     <table cellspacing="1" cellpadding="0" border="0" width="100%" class="edit view">
       <tbody>
         <tr>
